<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gambling Guide</string>
    <string name="action_settings">Settings</string>
    <string name="blackjack">Blackjack</string>
    <string name="getting_started">Getting Started</string>
    <string name="craps">Craps</string>
    <string name="bankroll">Bankroll</string>
    <string name="betting">Betting</string>
    <string name="practice">Practice</string>
    <string name="map">Map</string>
    <string name="read_me">Read Me</string>
    <string name="bet">Your Bet</string>
    <string name="bet_label">Average Bet: </string>
    <string name="bankroll_default">0 Dollars</string>
    <string name="calculate">Calculate</string>
    <string name="spin">Percentage Loss</string>
    <string name="percentage">Percentage: </string>
    <string name="back">Back</string>
    <string name="hours">Hours:</string>
    <string name="walk_away">Walk away at:</string>
    <string name="recommended">Recommended Bankroll:</string>
    <string name="bj_betting">The following betting strategy developed by the Wizard of Odds (wizardofodds.com) will allow you to reduce the house edge to around 0.53%. The betting strategy is based upon the current sum of your hand, and the card that the dealing is showing.</string>
    <string name="todo">This has not been implemented yet! Look for an update soon!</string>
    <string name="introduction">Gambling is not just about luck, by being knowledgeable about what games to play and how to play, you can minimize losses, and maybe even come out on top. This guide is designed for beginners, and it provides essential information for some of the more popular casino games.  For each game, there are four sections to help you succeed, each section is gone over in detail below:</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="readme_blackjack">Blackjack is a card game between a player and dealer, meaning that players compete against the dealer but not against any other players. It is one of the most widely played casino game in the world.</string>
    <string name="rules_blackjack">The object of the game is to beat the dealer, which can be done in a number of ways:\n\n• Get 21 points on the player\'s first two cards (called a blackjack), without a dealer blackjack;\n• Reach a final score higher than the dealer without exceeding 21; or\n• Let the dealer draw additional cards until his or her hand exceeds 21.\n\nThe player(s) and dealer are dealt an initial two&#8211;card hand and add together the value of their cards.  Only one of the dealer\'s card is shown until the players have performed their actions.  Face cards are counted as ten points and an ace can count as 1 point or 11 points. All other cards are counted as the numeric value shown on the card. If a player holds an ace valued as 11, the hand is called \"soft\", meaning that the player cannot bust by taking an additional card. Otherwise, the hand is \"hard\". After receiving their initial two cards, players have several possible actions discussed later on.\n</string>
    <string name="player_actions_blackjack">After receiving an initial two cards, the player has up to four standard options: \"hit\", \"stand\", \"double down\", or \"split\".\n\n• Hit: Take another card from the dealer.\n• Stand: Take no more cards.\n• Double down: The player is allowed to double his initial bet in exchange for committing to stand after receiving exactly one more card. The additional bet is placed in the betting box next to the original bet.\n• Split: If the first two cards of a hand have the same value, the player can split them into two hands, by moving a second bet equal to the first into an area outside the betting box. The dealer separates the two cards and draws an additional card on each, placing one bet with each hand. The player then plays out the two separate hands in turn; except for a few restrictions, the hands are treated as independent new hands, with the player winning or losing their wager separately for each hand. Doubling and further splitting of post&#8211;split hands may be restricted, and blackjacks after a split are counted as non&#8211;blackjack 21 when comparing against the dealer\'s hand. Hitting split aces is usually not allowed.</string>
    <string name="readme_craps">Craps is a dice game in which the players make wagers on the outcome of the roll, or a series of rolls, of a pair of dice.  It is often one of the liveliest tables in a casino which can often be intimidating to a new player, but don\'t worry because the optimal strategy is very simple and easy to learn.\n\nThis section won\'t go over ALL of the different bets and strategies that have to do with Craps because these things are not going to be used in the betting strategy.  If you are really interested you can learn them on your own.</string>
    <string name="player_bets_craps"><b>Pass line bet:</b> The fundamental bet in craps, which is a bet for the shooter to win.\n\n• If the come&#8211;out roll is 7 or 11, the bet wins.\n• If the come&#8211;out roll is 2, 3 or 12, the bet loses (known as \"crapping out\").\n• If the roll is any other value, it establishes a point.\n\t&#8211; If, with a point established, that point is rolled again before a 7, the bet wins.\n\t&#8211; If, with a point established, a 7 is rolled before the point is rolled again (\"seven out\"), the bet loses.\n\nThe pass line bet pays even money.\n\n<b>Pass odds:</b> If a 4, 5, 6, 8, 9, or 10 is thrown on the come&#8211;out roll (i.e., if a point is established), most casinos allow pass line players to take odds by placing up to some predetermined multiple of the pass line bet, behind the pass line. This additional bet wins if the point is rolled again before a 7 is rolled (the point is made) and pays at the true odds of 2&#8211;to&#8211;1 if 4 or 10 is the point, 3&#8211;to&#8211;2 if 5 or 9 is the point, or 6&#8211;to&#8211;5 if 6 or 8 is the point.</string>
    <string name="rules_craps">Players take turns rolling two dice and whoever is throwing the dice is called the \"shooter\". Players can bet on the various options by placing chips directly on the appropriately&#8211;marked sections of the layout, or asking the base dealer or stickman to do so, depending on which bet is being made. The game is played in rounds and \"Pass\" and \"Don\'t Pass\" bets are betting on the outcome of a round.\n\nEach round has two phases: \"come&#8211;out\" and \"point\". To start a round, the shooter makes one or more \"come&#8211;out\" rolls. A come&#8211;out roll of 2, 3 or 12 is called \"craps\" or \"crapping out\", and anyone betting the Pass line loses. A come&#8211;out roll of 7 or 11 is a \"natural\", and the Pass line wins. The other possible numbers are the point numbers: 4, 5, 6, 8, 9, and 10. If the shooter rolls one of these numbers on the come&#8211;out roll, this establishes the \"point\". The dealer flips a button to the \"On\" side and moves it to the point number signifying the second phase of the round. If the shooter \"hits\" the point value again before rolling a seven, the Pass line wins and a new round starts. If the shooter rolls any seven before repeating the point number (a \"seven&#8211;out\"), the Pass line loses and the dice pass clockwise to the next new shooter for the next round.</string>
    <string name="craps_betting">The following betting strategy will allow you to reduce the house edge to around 0.85%.\n\n1.  Wait until the come&#8211;out roll (when the OFF button is displayed)\n\n2.  Place your bet on the pass line\n</string>
    <string name="disclaimer_details">• The application is in no way perfect, it is meant to be a helpful resource for beginners.\n• Every game/slot in a casino has a house advantage, there is no easy way to overcome this advantage. A smart gambler understands that he/she is paying for entertainment in a casino. The more educated you are, the less you will end up paying.\n• The house edges given in the Betting section are not exact, but are good enough approximations for most casinos.</string>
    <string name="getting_started_practice">A practice/help scenario (this has not yet been implemented)</string>
    <string name="getting_started_bankroll">The Bankroll calculator suggests an amount of money to bring to a table and when to walk away if you are winning. The calculation is based upon how long you want to play at that table, and assumes that you are using a betting strategy described in the Betting section.</string>
    <string name="getting_started_readme">This section includes basic instructions on how the game is played, the rules of the game, and a few helpful tips about that game.</string>
    <string name="getting_started_betting">This section describes some easy and optimized betting strategies for the game you are playing as well as the house edge associated with each strategy.</string>
    <string name="additional_info">Additional Info</string>
    <string name="blackjack_additional">• Always try to find a table that pays 3:2 for Blackjack. Often times you will see other odds like 6:5, this substantially enlarges the house edge.\n• Don\'t be afraid to ask the dealers for help if you\'re confused about the bets or the rules at the Blackjack table.</string>
    <string name="player_actions">Player Actions</string>
    <string name="rules">Rules</string>
    <string name="player_bets">Player Bets</string>
    <string name="craps_additional">• Don\'t be afraid to sit and watch for a while before jumping in and playing.\n• Dealers will often ask if you want to take any bets in the middle of the table. These bets have the highest house edge in Craps, and it\'s recommended you don\'t take them.</string>
    <string name="craps_betting2">\n3.  Wait for a point to be established (ON is displayed)\n\n4.  Take an odds bet equal to your pass line (put your bet outside of the pass line closest to you)\n</string>
    <string name="craps_betting3">\n5.  Repeat steps 1&#8211;4 for each come out roll.\n\n6.  Order a free drink and relax.\n\nNote: In many cases, you are required to put more than equal money on the odds.  This is done to make the math easier for the dealers, and they will notify you if you need to add to your odds bet.</string>
    <string name="rules_blackjack2">\nOnce all the players have completed their turns, the dealer will then show both cards and has to take cards until his or her cards total 17 or more points. (In some casinos the dealer also hits on a \"soft\" 17, e.g. an initial ace and six.) Players win if they do not bust and have a total that is higher than the dealer\'s. The dealer loses if he or she busts or has a lesser hand than the player who has not busted. If the player and dealer have the same total, this is called a \"push\" and the player typically does not win or lose money on that hand.</string>

    <string-array name="spinnerItems">
        <item>15%</item>
        <item>10%</item>
        <item>5%</item>
        <item>2.5%</item>
    </string-array>

    <string-array name="spinnerItems2">
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
        <item>4 Hours</item>
        <item>8 Hours</item>
    </string-array>

</resources>
