<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craps_betting"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/craps_step_one"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craps_betting2"
            android:id="@+id/textView1"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/imageView2"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/craps_step_two"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craps_betting3"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>